force-app/main/default/objects/Case/fields/First_Response_Done__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Done__c</fullName>
    <label>First Response Done</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>First Response Done</description>
</CustomField>