force-app/main/default/objects/Case/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <description>Product Family</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
                <default>true</default>
                <label>Water</label>
            </value>
            <value>
                <fullName>Sparkling</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Distributor_Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>