force-app/main/default/objects/Case/fields/Reopen_Count__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Count__c</fullName>
    <label>Reopen Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Reopen Count</description>
</CustomField>