force-app/main/default/objects/Case/fields/Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Routing_Queue__c</fullName>
    <label>Routing Queue</label>
    <type>Text</type>
    <length>80</length>
    <description>Routing Queue</description>
</CustomField>