force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <description>Severity</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S4</fullName>
                <default>true</default>
                <label>S4</label>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>