force-app/main/default/objects/Case/fields/SLA_Due__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due__c</fullName>
    <label>SLA Due</label>
    <type>DateTime</type>
    <description>SLA Due</description>
</CustomField>