force-app/main/default/objects/Case/fields/SLA_Simple_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Simple_Minutes__c</fullName>
    <label>SLA Simple Minutes</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>SLA Simple Minutes</description>
</CustomField>